add ebean, mysql and tests