@@ -2,12 +2,25 @@ name := """com.soc4you"""
 
 version := "1.0-SNAPSHOT"
 
-lazy val root = (project in file(".")).enablePlugins(PlayJava)
+lazy val root = (project in file(".")).enablePlugins(PlayJava, PlayEbean)
 
 scalaVersion := "2.11.7"
 
 libraryDependencies ++= Seq(
   javaJdbc,
   cache,
-  javaWs
+  javaWs,
+  filters,
+  "mysql" % "mysql-connector-java" % "6.0.3"
+)
+playEbeanModels in Compile := Seq("models.*")
+playEbeanDebugLevel := 4
+playEbeanAgentArgs += ("detect" -> "false")
+playEbeanModels in Test := Seq("models.*")
+javaOptions in Test ++= Seq(
+  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
+  "-Xms512M",
+  "-Xmx1536M",
+  "-Xss1M",
+  "-XX:MaxPermSize=384M"
 )
